<resources>
    <string name="app_name">AAFEETY</string>
    <string name="google_map_api_key" translatable="false">AIzaSyB6FtH0ka94306fQ9VOsIvq4FQodTzcCow</string>
    <string name="google_map_api_key_1" translatable="false">AIzaSyA9Qod1kZPKd8xsRSyoYqBXh0YZsnI0fhk</string>
    <string name="locus_location_resolution_title">Location is currently disabled</string>
    <string name="locus_location_resolution_message">Please enable access to device location to get better experience</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="home_title">Home</string>
    <string name="ask_doctor_title">Ask doctor</string>
    <string name="medical_events_title">Medical events</string>
    <string name="app_magazine_title">App magazine</string>
    <string name="login_title">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="phone_number_hint">123456789</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="register_question">I have no account?</string>
    <string name="underlined_register"><u>Register</u></string>
    <string name="register_title">Register</string>
    <string name="username">Username</string>
    <string name="username_hint">Enter username</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter Email</string>
    <string name="age">Age</string>
    <string name="age_hint">Enter age</string>
    <string name="confirmation_password">Confirmation password</string>
    <string name="confirmation_password_hint">Enter confirmation password</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="register">Register</string>
    <string name="login_question">I Already have account?</string>
    <string name="underlined_login"><u>Login</u></string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="introduction_title_3">Remarkable quality\ndeserve your trust</string>
    <string name="introduction_title_2">Search for\nthe service you want</string>
    <string name="introduction_title_1">Welcome to\nSlamtk app</string>
    <string name="start">Start</string>
    <string name="gender_hint">Enter gender</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="city">City</string>
    <string name="city_hint">Select city</string>
    <string name="send">Send</string>
    <string name="forget_password_title">Forget password</string>
    <string name="otp_title">Enter verification code</string>
    <string name="verification_code">Verification code</string>
    <string name="underlined_resend_code"><u>Resend verification code</u></string>
    <string name="sumbit">Submit</string>
    <string name="reset_password_title">New Password</string>
    <string name="new_password">New password</string>
    <string name="save_changes">Save changes</string>
    <string name="departments">Departments</string>
    <string name="labs">Labs</string>
    <string name="departments_items_count">Counnnnnnnnnnnnnnnts</string>
    <string name="hospitals">Hospitals</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="medical_products">Medical products</string>
    <string name="famous">Famous</string>
    <string name="show_more">Show more</string>
    <string name="best_labs">Best labs</string>
    <string name="best_hospitals">Best hospitals</string>
    <string name="best_pharmacies">Best pharmacies</string>
    <string name="more_title">More</string>
    <string name="labs_title">Labs</string>
    <string name="search_hint">Search ...</string>
    <string name="labs_home_reservation_title">Search for labs providing home reservation</string>
    <string name="online_result_title">Send results online</string>
    <string name="home_reservation_title">Support home reservation</string>
    <string name="tests_count">Tests count %1$s</string>
    <string name="filter_dialog_title">Filter by</string>
    <string name="filter_by_location">Filter by location</string>
    <string name="filter_by_rate">Filter by rate</string>
    <string name="filter_button">Choose</string>
    <string name="filtered_labs_title">Filtered labs</string>
    <string name="filtered_by_title">Filtered by:</string>
    <string name="lab_details_title">Lab details</string>
    <string name="request_home_reservation">Request home reservation</string>
    <string name="currency">KWD</string>
    <string name="book_tests">Book tests</string>
    <string name="reservation_details_title">Reservation details</string>
    <string name="reservation_details_home_reservation">I want to make tests at home</string>
    <string name="total_price">Total price</string>
    <string name="confirm_reservation">Confirm</string>
    <string name="thank_you">Thank you</string>
    <string name="confirmation_message">Reservation confirmed and sent to my reservations</string>
    <string name="home">Home</string>
    <string name="my_reservations">My reservations</string>
    <string name="hospitals_title">Hospitals</string>
    <string name="special_hospitals">Special hospitals</string>
    <string name="hospital_details_title">Hospital details</string>
    <string name="hospital_more_details_title">Hospital information</string>
    <string name="hospital_more_details_location_title">Location</string>
    <string name="doctor_details_title">Doctor details</string>
    <string name="doctor_support_home_reservation">Support home reservation</string>
    <string name="about_doctor_title">About doctor</string>
    <string name="work_time">Work time</string>
    <string name="book_now">Book now</string>
    <string name="doctor_reservation_username">Username</string>
    <string name="doctor_reservation_username_hint">Enter username</string>
    <string name="reservation_date">Reservation date</string>
    <string name="reservation_date_hint">Enter reservation date</string>
    <string name="doctor_reservation_phone_number">Phone number</string>
    <string name="doctor_reservation_phone_number_hint">Enter phone number</string>
    <string name="attach_report">Attach report</string>
    <string name="access_medical_files">Access to the medical file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home_reservation_q">Home reservation?</string>
    <string name="pharmacies_title">Pharmacies</string>
    <string name="special_pharmacies">Special pharmacies</string>
    <string name="pharmacy_details_title">Pharmacy details</string>
    <string name="delivery_fare_title">Delivery fare:</string>
    <string name="send_prescription">Send\nprescription</string>
    <string name="call_now">Call now\n</string>
    <string name="search_for_medicine">Search for\nmedicine</string>
    <string name="medicines">Medicines</string>
    <string name="medicine_search_dialog_title">Search for medicine</string>
    <string name="medicine_name_title">Medicine name</string>
    <string name="medicine_name_hint">Enter medicine name</string>
    <string name="section_title">Section</string>
    <string name="medicine_section_hint">Enter section</string>
    <string name="search">Search</string>
    <string name="products_title">Medical products</string>
    <string name="product_details_title">Product details</string>
    <string name="product_description">Product description</string>
    <string name="similar_products">Similar products</string>
    <string name="medical_products_title">Medical products</string>
    <string name="welcome">Welcome</string>
    <string name="my_orders">My orders</string>
    <string name="my_medical_files">My medical files</string>
    <string name="notifications">Notifications</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="about_us">About us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="contact_us">Contact us</string>
    <string name="current_reservation">Current reservation</string>
    <string name="underlined_add_review"><u>review</u></string>
    <string name="past_reservation">Past reservation</string>
    <string name="my_reservations_title">My reservations</string>
    <string name="my_lab_reservation_details_title">Reservation details</string>
    <string name="reservation_details">Reservation details</string>
    <string name="lab_name">Lab name</string>
    <string name="test_count">Test count</string>
    <string name="underlined_more"><u>more</u></string>
    <string name="reservation_number">Reservation number</string>
    <string name="lab_address">Lab address</string>
    <string name="reservation_status">Reservation status</string>
    <string name="rate">Rate</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="my_hospital_reservation_details_title">Reservation details</string>
    <string name="hospital_name">Hospital name</string>
    <string name="hospital_address">Hospital address</string>
    <string name="my_orders_title">My orders</string>
    <string name="order_products_title">Order products</string>
    <string name="order_details_title">Order details</string>
    <string name="order_details">Order details</string>
    <string name="pharmacy_name">Pharmacy name</string>
    <string name="department">Department</string>
    <string name="order_number">Order number</string>
    <string name="order_date">Order date</string>
    <string name="current_order">Current order</string>
    <string name="past_order">Past order</string>
    <string name="order_status">Order status</string>
    <string name="pharmacy_address">Pharmacy address</string>
    <string name="famous_name">Famous name</string>
    <string name="my_medical_files_title">My medical files</string>
    <string name="medical_file_item_header">Files added by doctor</string>
    <string name="medical_file_item_name">File for Seifo</string>
    <string name="new_status">New</string>
    <string name="empty_field_error_message">Please fill this field</string>
    <string name="phone_number_length_error_message">Phone must be 9 numbers</string>
    <string name="username_length_error_message">username must contain at least 3 characters</string>
    <string name="password_length_error_message">Password must contain at least 6 characters</string>
    <string name="email_validation_error_message">Email is not valid</string>
    <string name="age_range_error_massage">You must be older than 16 years</string>
    <string name="confirmation_password_error_message">Password and it\'s confirmation don\'t match</string>
    <string name="empty_spinner_field_error_message">Please choose one option</string>
    <string name="terms_conditions_error_message"><![CDATA[You have to accept terms & conditions to continue]]></string>
    <string name="otp_length_error_message">OTP must be 4 numbers</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="something_went_wrong_try_again_later">Something went wrong, try again later</string>
    <string name="dismiss">Dismiss</string>
    <string name="hospital_reservations_count">Booking count: %1$d</string>
    <string name="empty_hospitals_text">No hospitals found</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="lab_examinations_count">Examinations count: %1$d</string>
    <string name="empty_labs_text">No labs found</string>
    <string name="empty_doctors_text">No doctors found</string>
    <string name="empty_reviews_text">No reviews found</string>
    <string name="login_as_guest">Login as guest</string>
</resources>